<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.macwap.obakprithibi.untils.ProfileScreenXMLUIDesign">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cover" />



        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/profile_circular_border_imageview"
            android:elevation="5dp"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dev" />




        <RelativeLayout

            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/colorTitle"
            android:elevation="0dp"
            android:paddingBottom="24dp">


            <ImageView
                 android:id="@+id/add_friend"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_toLeftOf="@+id/drop_down_option_menu"
                app:srcCompat="@drawable/whastapp" />




            <ImageView
                android:id="@+id/drop_down_option_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/fb_messanger" />

            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/dev_name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_profile_short_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/dev_description"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"

            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/email" />

            <TextView
                android:id="@+id/email"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                 android:clickable="true"
                android:elevation="4dp"
                android:padding="10dp"
                android:text="@string/dev_email" />
        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="10dp"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phone"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="10dp"
                    android:text="@string/whatsapp_number" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="10dp"
                    android:text="@string/Website" />

                <TextView
                    android:id="@+id/website"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="10dp"
                    android:text="@string/dev_link" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>